syntax = "proto3";

package grpc.accounts;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.eagle.grpc.accounts.lib";
option java_outer_classname = "AccountsProto";
option go_package = "common/accounts";

service Accounts {
  rpc GetAccounts(google.protobuf.Empty) returns (AccountResponse){}
  rpc GetAccountById(AccountReq) returns (AccountResponse){}
}

message AccountReq {
  int64 id = 1;
}

message AccountResponse {
  int64 id = 1;
  string discordId = 2;
  string name = 3;
}